--- a/css/app.css
+++ b/css/app.css
@@ -35,3 +35,12 @@
 .hidden {
   display: none;
 }
+/*
+.tab-content > .tab-pane {
+    display: none;
+}
+
+.tab-content > .active {
+  display: block;
+}
+*/
